src/test/resources/typeSystemTestModels/valid/classes/ClassOptionalBoundsAreInterfaces.java
package typeSystemTestModels.valid.classes;

import java.lang.String;
import java.util.List;

public class ClassOptionalBoundsAreInterfaces<T extends String & List> {

}