src/test/resources/typeSystemTestModels/invalid/classes/ClassOptionalBoundsAreInterfaces.java
package typeSystemTestModels.invalid.classes;

import java.lang.Number;
import java.lang.String;

public class ClassOptionalBoundsAreInterfaces<T extends Number & String> {

}
